# Lumenairy

./: .gitignore  CHANGELOG.md  GUI_CHANGELOG.md  GUI_README.md  README.md  pyproject.toml
lumenairy/: __init__.py  asymptotic.py  lenses.py  optimize.py  prescriptions.py  propagation.py  raytrace.py  sources.py
lumenairy/ui/: main_window.py
validation/: test_asymptotic.py  test_io.py  test_lenses.py  test_raytrace.py
validation/real_lens_opd/: export_all_zemax.py  lens_cases.py  run_validation.py
validation/real_lens_opd/results/: AC254_050_C_opd.csv  AC254_100_C_1064nm_opd.csv  AC254_100_C_1310nm_opd.csv  AC254_100_C_1550nm_opd.csv  AC254_100_C_opd.csv  AC254_200_C_opd.csv  LA1050_C_opd.csv  LA1301_C_opd.csv  LA1509_C_opd.csv  biconcave_R50_BK7_opd.csv  equi_convex_R50_BK7_opd.csv  fnum_sweep_f10_R100_opd.csv  fnum_sweep_f20_R200_opd.csv  fnum_sweep_f2_R20_opd.csv  fnum_sweep_f3_R30_opd.csv  fnum_sweep_f5_R50_opd.csv  meniscus_negative_BK7_opd.csv  meniscus_positive_BK7_opd.csv  plano_convex_R50_BK7_opd.csv  plano_convex_R50_SF6_opd.csv  plano_convex_thick_BK7_opd.csv
validation/through_focus_smoke/: run_smoke.py
